faltando alguns ajustes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="timer">
             <span class="minutes">25</span>
             <span>:</span>
-            <span class="secords">00</span>
+            <span class="seconds">00</span>
         </div>
         <div id="controls">
             <button class="play">
@@ -26,26 +26,25 @@
             <button class="increase" >
                 <img src="img/+.png" alt="">
             </button>
-            <button  class="to decrease">
+            <button  class="todecrease">
                 <img src="img/-.png" alt="">
             </button>
         </div>
         <div class="sons">
-            <button class="vector"onclick="adicionarAudioVento()" >
-                <img src="img/Card 01.png" alt="">
-                <audio src="sounds/Floresta.wav"></audio>
-            </button>
+           <button class="vento" onclick="adicionarAudioFlorest()">
+                <img src="img/Card 01.png">
+           </button>
             <button class="nuvem"onclick="adicionarAudioChuva()" >
                 <img src="img/Card 02.png">
             </button>
-            <button class="house"onclick="adicionarAudioHouse()" >
+            <button class="house"onclick="adicionarAudioCafeteria()" >
                 <img src="img/Card 03.png" alt="">
             </button>
-            <button class="cool" onclick="adicionarAudioCool()" >
+            <button class="cool" onclick="adicionarAudioLareira()" >
                 <img src="img/Card 04.png" alt="">
             </button>
         </div>
-       
+      
     </main>
 
    
